# Comp1100-assignment2

./: README.md  comp1100-assignment2.cabal
app/: Main.hs
src/: Controller.hs  Model.hs  Turtle.hs  View.hs
test/: Testing.hs  TurtleTest.hs
