name:                comp1100-assignment2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://cs.anu.edu.au/courses/comp1100
license:             BSD3
license-file:        LICENSE
author:              Tony Hosking
maintainer:          antony.hosking@anu.edu.au
copyright:           2018 The Australian National University
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Source-Repository head
  type:     git
  location: https://gitlab.cecs.anu.edu.au/comp1100/comp1100-assignment2.git

executable Main
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       View, Controller, Model
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, codeworld-api, text, doctest
  ghc-options:         -Wall -threaded

test-suite DocTests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             Test.hs
  other-modules:       Controller, Model, View
  build-depends:       base >= 4.7 && < 5, codeworld-api, text, doctest
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
